tests/snapshots/test_attribute__meta_item_list_name_value-2.snap
---
created: "2019-04-06T05:46:03.289949818Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo,
        ),
        paren_token: Paren,
        nested: [
            Meta(
                NameValue(
                    MetaNameValue {
                        ident: Ident(
                            bar,
                        ),
                        eq_token: Eq,
                        lit: Int(
                            LitInt {
                                token: Literal {
                                    lit: 5,
                                },
                            },
                        ),
                    },
                ),
            ),
        ],
    },
)
