tests/snapshots/test_attribute__meta_item_list_name_value.snap
---
created: "2019-03-11T05:39:56.775177870Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo
        ),
        paren_token: Paren,
        nested: [
            Meta(
                NameValue(
                    MetaNameValue {
                        ident: Ident(
                            bar
                        ),
                        eq_token: Eq,
                        lit: Int(
                            LitInt {
                                token: Literal {
                                    lit: 5
                                }
                            }
                        )
                    }
                )
            )
        ]
    }
)
