tests/snapshots/test_attribute__meta_item_list_path-2.snap
---
created: "2019-03-15T08:17:20.455754900Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo
        ),
        paren_token: Paren,
        nested: [
            Meta(
                Path(
                    Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    bar
                                ),
                                arguments: None
                            },
                            Colon2,
                            PathSegment {
                                ident: Ident(
                                    Baz
                                ),
                                arguments: None
                            }
                        ]
                    }
                )
            )
        ]
    }
)
