tests/snapshots/test_attribute__meta_item_list_path_leading_colon.snap
---
created: "2019-03-17T19:23:24.170294200Z"
creator: insta@0.7.1
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        path: Path {
            leading_colon: Some(
                Colon2
            ),
            segments: [
                PathSegment {
                    ident: Ident(
                        foo
                    ),
                    arguments: None
                },
                Colon2,
                PathSegment {
                    ident: Ident(
                        bar
                    ),
                    arguments: None
                }
            ]
        },
        paren_token: Paren,
        nested: [
            Meta(
                Path(
                    Path {
                        leading_colon: Some(
                            Colon2
                        ),
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    baz
                                ),
                                arguments: None
                            },
                            Colon2,
                            PathSegment {
                                ident: Ident(
                                    Qux
                                ),
                                arguments: None
                            }
                        ]
                    }
                )
            )
        ]
    }
)
