tests/snapshots/test_attribute__meta_item_list_word-2.snap
---
created: "2019-04-06T05:46:03.291107448Z"
creator: insta@0.7.4
source: tests/test_attribute.rs
expression: syntax_tree
---
List(
    MetaList {
        ident: Ident(
            foo,
        ),
        paren_token: Paren,
        nested: [
            Meta(
                Word(
                    Ident(
                        bar,
                    ),
                ),
            ),
        ],
    },
)
